-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 11, 12
-
Component/s: hotspot
-
b30
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8217810 | 13 | Igor Ignatyev | P3 | Resolved | Fixed | b06 |
| JDK-8218354 | 12.0.2 | Igor Ignatyev | P3 | Resolved | Fixed | b01 |
| JDK-8218306 | 12.0.1 | Igor Ignatyev | P3 | Resolved | Fixed | b06 |
| JDK-8234547 | 11.0.7-oracle | Igor Ignatyev | P3 | Resolved | Fixed | b01 |
| JDK-8235419 | 11.0.7 | Igor Ignatyev | P3 | Resolved | Fixed | b01 |
#
# A fatal error has been detected by the Java Runtime Environment:
#
# SIGSEGV (0xb) at pc=0x0000000000000000, pid=16271, tid=16289
#
# JRE version: Java(TM) SE Runtime Environment (12.0+24) (fastdebug build 12-ea+24)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 12-ea+24, mixed mode, aot, sharing, compressed oops, g1 gc, linux-amd64)
# Problematic frame:
#
[error occurred during error reporting (printing problematic frame), id 0xe0000000, Internal Error (/scratch/opt/mach5/mesos/work_dir/slaves/2dd962d0-8988-479b-a804-57ab764ada59-S77535/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/56deddd2-d67f-4632-ac9a-f3da8a999613/runs/9a7f1803-e7b2-4251-8f1b-dc3b9beae226/workspace/open/src/hotspot/cpu/x86/frame_x86.inline.hpp:49)]
# Core dump will be written. Default location: /scratch/opt/mach5/mesos/work_dir/slaves/2dd962d0-8988-479b-a804-57ab764ada59-S1254/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/ba6db010-1a20-4249-8a09-057bbb96cc45/runs/36181c90-8eec-4b65-ab15-b37018b66dd4/testOutput/test-support/jtreg_open_test_hotspot_jtreg_hotspot_compiler_all_gcs/scratch/1/core.16271
#
# If you would like to submit a bug report, please visit:
# http://bugreport.java.com/bugreport/crash.jsp
#
--------------- S U M M A R Y ------------
Command Line: -Dtest.class.path.prefix=/scratch/opt/mach5/mesos/work_dir/slaves/2dd962d0-8988-479b-a804-57ab764ada59-S1254/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/ba6db010-1a20-4249-8a09-057bbb96cc45/runs/36181c90-8eec-4b65-ab15-b37018b66dd4/testOutput/test-support/jtreg_open_test_hotspot_jtreg_hotspot_compiler_all_gcs/classes/3/compiler/intrinsics/bigInteger/TestMulAdd.d:/scratch/opt/mach5/mesos/work_dir/jib-master/install/jdk/12/24/src.full/open/test/hotspot/jtreg/compiler/intrinsics/bigInteger -Dtest.src=/scratch/opt/mach5/mesos/work_dir/jib-master/install/jdk/12/24/src.full/open/test/hotspot/jtreg/compiler/intrinsics/bigInteger -Dtest.src.path=/scratch/opt/mach5/mesos/work_dir/jib-master/install/jdk/12/24/src.full/open/test/hotspot/jtreg/compiler/intrinsics/bigInteger -Dtest.classes=/scratch/opt/mach5/mesos/work_dir/slaves/2dd962d0-8988-479b-a804-57ab764ada59-S1254/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/ba6db010-1a20-4249-8a09-057bbb96cc45/runs/36181c90-8eec-4b65-ab15-b37018b66dd4/testOutput/test-support/jtreg_open_test_hotspot_jtreg_hotspot_compiler_all_gcs/classes/3/compiler/intrinsics/bigInteger/TestMulAdd.d -Dtest.class.path=/scratch/opt/mach5/mesos/work_dir/slaves/2dd962d0-8988-479b-a804-57ab764ada59-S1254/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/ba6db010-1a20-4249-8a09-057bbb96cc45/runs/36181c90-8eec-4b65-ab15-b37018b66dd4/testOutput/test-support/jtreg_open_test_hotspot_jtreg_hotspot_compiler_all_gcs/classes/3/compiler/intrinsics/bigInteger/TestMulAdd.d -Dtest.vm.opts=-XX:MaxRAMPercentage=6 -XX:AOTLibrary=/scratch/opt/mach5/mesos/work_dir/slaves/2dd962d0-8988-479b-a804-57ab764ada59-S1254/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/ba6db010-1a20-4249-8a09-057bbb96cc45/runs/36181c90-8eec-4b65-ab15-b37018b66dd4/./testOutput/test-support/aot/jtreg_open_test_hotspot_jtreg_hotspot_compiler_all_gcs/libjava.base.so -Dtest.tool.vm.opts=-J-XX:MaxRAMPercentage=6 -J-XX:AOTLibrary=/scratch/opt/mach5/mesos/work_dir/slaves/2dd962d0-8988-479b-a804-57ab764ada59-S1254/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/ba6db010-1a20-4249-8a09-057bbb96cc45/runs/36181c90-8eec-4b65-ab15-b37018b66dd4/./testOutput/test-support/aot/jtreg_open_test_hotspot_jtreg_hotspot_compiler_all_gcs/libjava.base.so -Dtest.compiler.opts= -Dtest.java.opts=-server -Dtest.jdk=/scratch/opt/mach5/mesos/work_dir/jib-master/install/jdk/12/24/linux-x64-debug.jdk/jdk-12/fastdebug -Dcompile.jdk=/scratch/opt/mach5/mesos/work_dir/jib-master/install/jdk/12/24/linux-x64-debug.jdk/jdk-12/fastdebug -Dtest.timeout.factor=4.0 -Dtest.nativepath=/scratch/opt/mach5/mesos/work_dir/jib-master/install/jdk/12/24/linux-x64-debug.test/hotspot/jtreg/native -XX:MaxRAMPercentage=6 -XX:AOTLibrary=/scratch/opt/mach5/mesos/work_dir/slaves/2dd962d0-8988-479b-a804-57ab764ada59-S1254/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/ba6db010-1a20-4249-8a09-057bbb96cc45/runs/36181c90-8eec-4b65-ab15-b37018b66dd4/./testOutput/test-support/aot/jtreg_open_test_hotspot_jtreg_hotspot_compiler_all_gcs/libjava.base.so -Djava.library.path=/scratch/opt/mach5/mesos/work_dir/jib-master/install/jdk/12/24/linux-x64-debug.test/hotspot/jtreg/native -XX:-TieredCompilation -Xbatch -XX:+IgnoreUnrecognizedVMOptions -XX:+UnlockDiagnosticVMOptions -XX:-UseSquareToLenIntrinsic -XX:-UseMultiplyToLenIntrinsic -XX:CompileCommand=dontinline,compiler.intrinsics.bigInteger.TestMulAdd::main -XX:CompileCommand=option,compiler.intrinsics.bigInteger.TestMulAdd::base_multiply,ccstr,DisableIntrinsic,_mulAdd -XX:CompileCommand=option,java.math.BigInteger::multiply,ccstr,DisableIntrinsic,_mulAdd -XX:CompileCommand=option,java.math.BigInteger::square,ccstr,DisableIntrinsic,_mulAdd -XX:CompileCommand=option,java.math.BigInteger::squareToLen,ccstr,DisableIntrinsic,_mulAdd -XX:CompileCommand=option,java.math.BigInteger::mulAdd,ccstr,DisableIntrinsic,_mulAdd -XX:CompileCommand=inline,java.math.BigInteger::multiply -XX:CompileCommand=inline,java.math.BigInteger::square -XX:CompileCommand=inline,java.math.BigInteger::squareToLen -XX:CompileCommand=inline,java.math.BigInteger::mulAdd com.sun.javatest.regtest.agent.MainWrapper /scratch/opt/mach5/mesos/work_dir/slaves/2dd962d0-8988-479b-a804-57ab764ada59-S1254/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/ba6db010-1a20-4249-8a09-057bbb96cc45/runs/36181c90-8eec-4b65-ab15-b37018b66dd4/testOutput/test-support/jtreg_open_test_hotspot_jtreg_hotspot_compiler_all_gcs/compiler/intrinsics/bigInteger/TestMulAdd.d/main.0.jta
Host: Intel(R) Xeon(R) CPU E5-2690 0 @ 2.90GHz, 8 cores, 59G, Oracle Linux Server release 7.1
Time: Sat Dec 15 16:16:44 2018 PST elapsed time: 0 seconds (0d 0h 0m 0s)
--------------- T H R E A D ---------------
Current thread (0x00007f1ac88a8800): JavaThread "MainThread" [_thread_in_Java, id=16289, stack(0x00007f1a996d3000,0x00007f1a997d4000)]
Stack: [0x00007f1a996d3000,0x00007f1a997d4000]
[error occurred during error reporting (printing stack bounds), id 0xe0000000, Internal Error (/scratch/opt/mach5/mesos/work_dir/slaves/2dd962d0-8988-479b-a804-57ab764ada59-S77535/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/56deddd2-d67f-4632-ac9a-f3da8a999613/runs/9a7f1803-e7b2-4251-8f1b-dc3b9beae226/workspace/open/src/hotspot/cpu/x86/frame_x86.inline.hpp:49)]
[error occurred during error reporting (printing native stack), id 0xe0000000, Internal Error (/scratch/opt/mach5/mesos/work_dir/slaves/2dd962d0-8988-479b-a804-57ab764ada59-S77535/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/56deddd2-d67f-4632-ac9a-f3da8a999613/runs/9a7f1803-e7b2-4251-8f1b-dc3b9beae226/workspace/open/src/hotspot/cpu/x86/frame_x86.inline.hpp:49)]
siginfo: si_signo: 11 (SIGSEGV), si_code: 1 (SEGV_MAPERR), si_addr: 0x0000000000000000
Register to memory mapping:
RAX=0x0000000800000000 is pointing into metadata
RBX=
[error occurred during error reporting (printing register info), id 0xb, SIGSEGV (0xb) at pc=0x00007f1acfd14407]
Registers:
RAX=0x0000000800000000, RBX=0x0000000757abd110, RCX=0x00000000000000ac, RDX=0x0000000757abd288
RSP=0x00007f1a997d1f48, RBP=0x00007f1a997d2058, RSI=0x0000000000000056, RDI=0x0000000757abd120
R8 =0x00000000000000ac, R9 =0x0000000757abd278, R10=0x00000007fff0b610, R11=0x00000007ffe2bce0
R12=0x0000000000000000, R13=0x0000000000000000, R14=0x00000007fff5f260, R15=0x00007f1ac88a8800
RIP=0x0000000000000000, EFLAGS=0x0000000000010246, CSGSFS=0x0000000000000033, ERR=0x0000000000000014
TRAPNO=0x000000000000000e
Top of Stack: (sp=0x00007f1a997d1f48)
0x00007f1a997d1f48: 00007f1ab4507d74 00007f1a997d1f90
0x00007f1a997d1f58: 00007f1a997d1f80 0000000757abd110
0x00007f1a997d1f68: 0000000757abd278 000000ac57abcf80
0x00007f1a997d1f78: 00007f1ab4507be0 00000056c88a8800
Instructions: (pc=0x0000000000000000)
0xffffffffffffffe0:
[error occurred during error reporting (inspecting top of stack), id 0xe0000000, Internal Error (/scratch/opt/mach5/mesos/work_dir/slaves/2dd962d0-8988-479b-a804-57ab764ada59-S77535/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/56deddd2-d67f-4632-ac9a-f3da8a999613/runs/9a7f1803-e7b2-4251-8f1b-dc3b9beae226/workspace/open/src/hotspot/cpu/x86/frame_x86.inline.hpp:49)]
- backported by
-
JDK-8217810 [AOT] compiler/intrinsics/bigInteger/TestMulAdd.java crashed with AOT enabled
-
- Resolved
-
-
JDK-8218306 [AOT] compiler/intrinsics/bigInteger/TestMulAdd.java crashed with AOT enabled
-
- Resolved
-
-
JDK-8218354 [AOT] compiler/intrinsics/bigInteger/TestMulAdd.java crashed with AOT enabled
-
- Resolved
-
-
JDK-8234547 [AOT] compiler/intrinsics/bigInteger/TestMulAdd.java crashed with AOT enabled
-
- Resolved
-
-
JDK-8235419 [AOT] compiler/intrinsics/bigInteger/TestMulAdd.java crashed with AOT enabled
-
- Resolved
-
- relates to
-
JDK-8189697 AOT: compiler/intrinsics/bigInteger/TestMulAdd.java crashes with SIGSEGV with AOTed jdk.base
-
- Closed
-