8216180: [AOT] compiler/intrinsics/bigInteger/TestMulAdd.java crashed with AOT enabled Reviewed-by: kvn